tests/baselines/reference/objectLiteralShorthandPropertiesES6(strict=true).errors.txt
objectLiteralShorthandPropertiesES6.ts(11,5): error TS7022: 'x3' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== objectLiteralShorthandPropertiesES6.ts (1 errors) ====
    var a, b, c;
    
    var x1 = {
        a
    };
    
    var x2 = {
        a,
    }
    
    var x3 = {
        ~~
!!! error TS7022: 'x3' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
        a: 0,
        b,
        c,
        d() { },
        x3,
        parent: x3
    };
    
    